--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,9 +197,27 @@ h3 {
     font-weight: lighter;
     font-size: 26px;
     margin-bottom: 25px;
-  }
-  
-  .trainer-bio p {
+}
+.trainer-bio p {
     font-size: 17px;
     line-height: 1.3;
-  }
+}
+.contact {
+   background-color: #024e76;
+   text-align: center;
+}
+.contact h2 {
+    color: #fce138;
+}
+.contact-info iframe {
+    width: 400px;
+    height: 400px;
+}
+.contact-info div{
+    color: white;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+    width: 410px;
+    margin: 30px 0 0 60px;
+}
