--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,9 @@ body {
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
   }
 header h1 {
     font-weight: bold;
@@ -29,7 +32,6 @@ it an inline property allowing the what we do to move up
 This also made the the blue background not extend down 
 below the list */
 header nav {
-    float: right;
     margin: 7px 0;
 }
 /* li elements default to inline, so this allows them to 
