add flexbox to header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,14 +36,18 @@ header nav {
 }
 /* li elements default to inline, so this allows them to 
 be displayed left to right  */
-header nav ul li {
-    display: inline;
+header nav ul  {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
 }
 /* spaced the list in the header out */
 header nav ul li a {
     margin: 0 30px;
     font-weight: lighter;
-    font-size: 22px;
+    font-size: 1.55vw;
 }
 header h1 {
     font-weight: bold;
