--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,16 +136,17 @@ h3 {
     color: #fce138;
 }
   /* HERO STYLES END */
-.intro {
-    text-align: center;
+  .flex-row {
+    display: flex;
   }
 .section-title {
-    display: inline-block;
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 .primary-border{
     border-color: #fce138;
@@ -159,31 +160,51 @@ h3 {
     width: 80%;
     font-size: 20px;
     margin: 0px auto;
+    text-align: center;
 }
 .steps {
-    text-align: center;
     background: #fce138;
 }
-.steps div {
-    margin-bottom: 80px;
-}
-.steps img {
-    width: 15%;
-    margin: 10px 0;
-}
-.steps h3 {
+
+.step h3 {
+    flex: 1 30%;
     color: #024e76;
     font-size: 56px;
 }
-.steps p {
+.step-info {
+    flex: 2 70%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+.step-text p {
     color: #39a6b2;
-    font-size: 23px;
+    font-size: 15px;
 }
-.steps span {
-    font-size: 38px;
+.step-text h4 {
+    font-size: 26px;
+    line-height: 1.5;
+    color: #024e76;
 }
-.trainers {
-    text-align: center;
+.step {
+    margin: 50px auto;
+    padding-bottom: 50px;
+    width: 80%;
+    border-bottom: 1px solid #39a6b2;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+.step-img {
+    flex: 1 12%;
+    margin-right: 20px;
+}
+.step-text {
+    flex: 12;
+}
+.step-img img {
+    max-width: 100%;
 }
 .trainer {
     overflow: auto;
@@ -222,7 +243,6 @@ h3 {
 }
 .contact {
    background-color: #024e76;
-   text-align: center;
 }
 .contact h2 {
     color: #fce138;
