--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -252,26 +252,46 @@ h3 {
     color: #fce138;
 }
 .contact-info iframe {
-    width: 400px;
-    height: 400px;
+
 }
 .contact-info div{
     color: white;
-    display: inline-block;
-    vertical-align: top;
-    text-align: left;
-    width: 410px;
-    margin: 30px 0 0 60px;
 }
 .contact-info h3 {
     color: #fce138;
     font-size: 32px;
 }
-  
+.contact-info {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.contact-info > * {
+    flex: 1;
+    margin: 15px;
+}
+.contact-form input, .contact-form textarea {
+    border: 1px solid #024e76;
+    display: block;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: #024e76;
+    width: 100%;
+    margin-bottom: 15px;
+    margin-top: 5px;
+}
+.contact-form button {
+    width: 100%;
+    border: none;
+    background: #fce138;
+    text-align: center;
+    padding: 15px 9;
+    font-size: 16px;
+}
 .contact-info p, .contact-info address {
     margin: 20px 0;
     line-height: 1.5;
-    font-size: 20px;
+    font-size: 16px;
     font-style: normal;
 }
 .contact-info a {
